Fixes padding issue, fixes filters, removes grass, fixes spacing (page width restrictions)

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -136,6 +136,7 @@ h1{
 /* Page Content */
 .container-fluid{
   padding-left: 0px;
+  padding-right: 0px;
 }
 .container-donna {
   padding-top: 120px;
@@ -164,12 +165,6 @@ h1{
 	  font-style: italic;
 	  color: $accent-dark-purple;
   }
-  
-  /* Image Source: http://www.clipartbest.com/cliparts/biy/Knn/biyKnn4iL.png
-  background-image:url('/assets/butterfly.gif');
-  background-repeat:no-repeat;
-  background-position:0% 20%;
-  background-attachment: fixed; */
 }
 
 .row-donna-home-icons {
@@ -329,16 +324,6 @@ a.btn.btn-danger{
 }
 
 /* Footer CSS */
-.pre-footer{
-  bottom: 20px;
-  width: 100%;
-  position: fixed;
-  height: 100px;
-  /*http://tuffdogglawn.com/wp-content/uploads/2015/02/footer-grass.png*/
-  background-image: url('/assets/footer-grass-export.png');
-  background-repeat: none;
-  z-index: 9999999;
-}
 .footer {
   bottom: 0;
   width: 100%;
@@ -441,9 +426,4 @@ div.alert {
 .jumbo-text{
   font-size: 1.5em;
   margin-left: 15px;
-}
-
-/* Google */
-#google_translate_element a, {
-  text-decoration: none;
 }
